# torrent-ctrl-bot

./: .gitignore  README.md  pyproject.toml
src/c2_telegram_bot/: bot_context.py  command_handler_access.py  command_handler_builder.py  environ_var.py  handler_builder.py  main.py  message_handler_access.py  message_handler_builder.py  shell_exec.py  torrent_host.py
src/c2_telegram_bot/commands/: command_help.py  fast.py  list_completed.py  list_torrents.py  ls_command.py  remove_torrents.py  slow.py
src/c2_telegram_bot/interfaces/: command_handler_interface.py  handler_interface.py  message_handler_interface.py
src/c2_telegram_bot/messages/: echo.py  filter_magnet.py  magnet_link.py
tests/: conftest.py  helpers.py  test_command_help.py  test_list_completed.py  test_list_torrents.py  test_remove_torrents.py
